@@ -1,14 +1,12 @@
 package no.nav.bidrag.beregn.bidragsevne.periode;
 
-import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.toCollection;
-import static java.util.stream.Collectors.toList;
 
 import java.util.ArrayList;
 import java.util.List;
-import no.nav.bidrag.beregn.bidragsevne.beregning.Bidragsevneberegning;
-import no.nav.bidrag.beregn.bidragsevne.bo.BarnIHustandPeriode;
+import no.nav.bidrag.beregn.bidragsevne.beregning.BidragsevneBeregning;
 import no.nav.bidrag.beregn.bidragsevne.bo.BarnIHusstand;
+import no.nav.bidrag.beregn.bidragsevne.bo.BarnIHustandPeriode;
 import no.nav.bidrag.beregn.bidragsevne.bo.BeregnBidragsevneGrunnlag;
 import no.nav.bidrag.beregn.bidragsevne.bo.BeregnBidragsevneResultat;
 import no.nav.bidrag.beregn.bidragsevne.bo.Bostatus;
@@ -21,28 +19,21 @@ import no.nav.bidrag.beregn.bidragsevne.bo.Saerfradrag;
 import no.nav.bidrag.beregn.bidragsevne.bo.SaerfradragPeriode;
 import no.nav.bidrag.beregn.bidragsevne.bo.Skatteklasse;
 import no.nav.bidrag.beregn.bidragsevne.bo.SkatteklassePeriode;
-import no.nav.bidrag.beregn.felles.InntektUtil;
 import no.nav.bidrag.beregn.felles.PeriodeUtil;
 import no.nav.bidrag.beregn.felles.bo.Avvik;
 import no.nav.bidrag.beregn.felles.bo.Periode;
 import no.nav.bidrag.beregn.felles.bo.SjablonPeriode;
-import no.nav.bidrag.beregn.felles.enums.Rolle;
-import no.nav.bidrag.beregn.felles.enums.SoknadType;
-import no.nav.bidrag.beregn.felles.inntekt.InntektPeriodeGrunnlag;
 import no.nav.bidrag.beregn.felles.periode.Periodiserer;
-
 
 public class BidragsevnePeriodeImpl implements BidragsevnePeriode {
 
-  public BidragsevnePeriodeImpl(Bidragsevneberegning bidragsevneberegning) {
+  public BidragsevnePeriodeImpl(BidragsevneBeregning bidragsevneberegning) {
     this.bidragsevneberegning = bidragsevneberegning;
   }
 
-  //  private Bidragsevneberegning bidragsevneberegning = Bidragsevneberegning.getInstance();
-  private Bidragsevneberegning bidragsevneberegning;
+  private final BidragsevneBeregning bidragsevneberegning;
 
-  public BeregnBidragsevneResultat beregnPerioder(
-      BeregnBidragsevneGrunnlag beregnBidragsevneGrunnlag) {
+  public BeregnBidragsevneResultat beregnPerioder(BeregnBidragsevneGrunnlag beregnBidragsevneGrunnlag) {
 
     var resultatPeriodeListe = new ArrayList<ResultatPeriode>();
 
@@ -52,7 +43,7 @@ public class BidragsevnePeriodeImpl implements BidragsevnePeriode {
         .map(SjablonPeriode::new)
         .collect(toCollection(ArrayList::new));
 
-    var justertInntektPeriodeListe = justerInntekter(beregnBidragsevneGrunnlag.getInntektPeriodeListe())
+    var justertInntektPeriodeListe = beregnBidragsevneGrunnlag.getInntektPeriodeListe()
         .stream()
         .map(InntektPeriode::new)
         .collect(toCollection(ArrayList::new));
@@ -80,58 +71,66 @@ public class BidragsevnePeriodeImpl implements BidragsevnePeriode {
     // Bygger opp liste over perioder
     List<Periode> perioder = new Periodiserer()
         .addBruddpunkt(beregnBidragsevneGrunnlag.getBeregnDatoFra()) //For å sikre bruddpunkt på start-beregning-fra-dato
+        .addBruddpunkt(beregnBidragsevneGrunnlag.getBeregnDatoTil()) //For å sikre bruddpunkt på start-beregning-til-dato
         .addBruddpunkter(justertSjablonPeriodeListe)
         .addBruddpunkter(justertInntektPeriodeListe)
         .addBruddpunkter(justertSkatteklassePeriodeListe)
         .addBruddpunkter(justertBostatusPeriodeListe)
         .addBruddpunkter(justertAntallBarnIEgetHusholdPeriodeListe)
         .addBruddpunkter(justertSaerfradragPeriodeListe)
-        .addBruddpunkt(beregnBidragsevneGrunnlag.getBeregnDatoTil()) //For å sikre bruddpunkt på start-beregning-til-dato
         .finnPerioder(beregnBidragsevneGrunnlag.getBeregnDatoFra(), beregnBidragsevneGrunnlag.getBeregnDatoTil());
 
     // Løper gjennom periodene og finner matchende verdi for hver kategori. Kaller beregningsmodulen for hver beregningsperiode
 
     // Hvis det ligger 2 perioder på slutten som i til-dato inneholder hhv. beregningsperiodens til-dato og null slås de sammen
-    if (perioder.size() > 1) {
-      if ((perioder.get(perioder.size() - 2).getDatoTil().equals(beregnBidragsevneGrunnlag.getBeregnDatoTil())) &&
-          (perioder.get(perioder.size() - 1).getDatoTil() == null)) {
-        var nyPeriode = new Periode(perioder.get(perioder.size() - 2).getDatoFom(), null);
-        perioder.remove(perioder.size() - 1);
-        perioder.remove(perioder.size() - 1);
-        perioder.add(nyPeriode);
-      }
+    if ((perioder.size() > 1) &&
+        (perioder.get(perioder.size() - 2).getDatoTil().equals(beregnBidragsevneGrunnlag.getBeregnDatoTil())) &&
+        (perioder.get(perioder.size() - 1).getDatoTil() == null)) {
+      var nyPeriode = new Periode(perioder.get(perioder.size() - 2).getDatoFom(), null);
+      perioder.remove(perioder.size() - 1);
+      perioder.remove(perioder.size() - 1);
+      perioder.add(nyPeriode);
     }
 
     for (Periode beregningsperiode : perioder) {
 
-      var inntektListe = justertInntektPeriodeListe.stream().filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+      var inntektListe = justertInntektPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
           .map(inntektPeriode -> new Inntekt(inntektPeriode.getReferanse(), inntektPeriode.getInntektType(), inntektPeriode.getInntektBelop()))
-          .collect(toList());
+          .toList();
 
       var skatteklasse = justertSkatteklassePeriodeListe.stream()
           .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(skatteklassePeriode -> new Skatteklasse(skatteklassePeriode.getReferanse(), skatteklassePeriode.getSkatteklasse())).findFirst()
-          .orElse(null);
+          .map(skatteklassePeriode -> new Skatteklasse(skatteklassePeriode.getReferanse(), skatteklassePeriode.getSkatteklasse()))
+          .findFirst()
+          .orElseThrow(
+              () -> new IllegalArgumentException("Grunnlagsobjekt SKATTEKLASSE mangler data for periode: " + beregningsperiode.getPeriode()));
 
       var bostatus = justertBostatusPeriodeListe.stream().filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(bostatusPeriode -> new Bostatus(bostatusPeriode.getReferanse(), bostatusPeriode.getBostatusKode())).findFirst().orElse(null);
+          .map(bostatusPeriode -> new Bostatus(bostatusPeriode.getReferanse(), bostatusPeriode.getBostatusKode()))
+          .findFirst()
+          .orElseThrow(() -> new IllegalArgumentException("Grunnlagsobjekt BOSTATUS mangler data for periode: " + beregningsperiode.getPeriode()));
 
       var barnIHusstand = justertAntallBarnIEgetHusholdPeriodeListe.stream()
           .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(barnIHusstandPeriode -> new BarnIHusstand(barnIHusstandPeriode.getReferanse(), barnIHusstandPeriode.getAntallBarn())).findFirst()
-          .orElse(null);
+          .map(barnIHusstandPeriode -> new BarnIHusstand(barnIHusstandPeriode.getReferanse(), barnIHusstandPeriode.getAntallBarn()))
+          .findFirst()
+          .orElseThrow(
+              () -> new IllegalArgumentException("Grunnlagsobjekt BARN_I_HUSSTAND mangler data for periode: " + beregningsperiode.getPeriode()));
 
       var saerfradrag = justertSaerfradragPeriodeListe.stream()
           .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
-          .map(saerfradragPeriode -> new Saerfradrag(saerfradragPeriode.getReferanse(), saerfradragPeriode.getSaerfradragKode())).findFirst()
-          .orElse(null);
+          .map(saerfradragPeriode -> new Saerfradrag(saerfradragPeriode.getReferanse(), saerfradragPeriode.getSaerfradragKode()))
+          .findFirst()
+          .orElseThrow(() -> new IllegalArgumentException("Grunnlagsobjekt SAERFRADRAG mangler data for periode: " + beregningsperiode.getPeriode()));
 
-      var sjablonliste = justertSjablonPeriodeListe.stream().filter(i -> i.getPeriode().overlapperMed(beregningsperiode)).collect(toList());
+      var sjablonliste = justertSjablonPeriodeListe.stream()
+          .filter(i -> i.getPeriode().overlapperMed(beregningsperiode))
+          .toList();
 
       // Kaller beregningsmodulen for hver beregningsperiode
-      var beregnBidragsevneGrunnlagPeriodisert = new GrunnlagBeregning(inntektListe, skatteklasse, bostatus,
-          barnIHusstand,
-          saerfradrag, sjablonliste);
+      var beregnBidragsevneGrunnlagPeriodisert = new GrunnlagBeregning(inntektListe, skatteklasse, bostatus, barnIHusstand, saerfradrag,
+          sjablonliste);
 
       resultatPeriodeListe.add(new ResultatPeriode(beregningsperiode, bidragsevneberegning.beregn(beregnBidragsevneGrunnlagPeriodisert),
           beregnBidragsevneGrunnlagPeriodisert));
@@ -139,28 +138,7 @@ public class BidragsevnePeriodeImpl implements BidragsevnePeriode {
 
     //Slår sammen perioder med samme resultat
     return new BeregnBidragsevneResultat(resultatPeriodeListe);
-
   }
-
-  // Justerer inntekter basert på regler definert i InntektUtil (bidrag-beregn-felles)
-  private List<InntektPeriode> justerInntekter(List<InntektPeriode> inntektPeriodeListe) {
-
-    if (inntektPeriodeListe.isEmpty()) {
-      return inntektPeriodeListe;
-    }
-
-    var justertInntektPeriodeListe = InntektUtil.justerInntekter(inntektPeriodeListe.stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), false, false))
-        .collect(toList()));
-
-    return justertInntektPeriodeListe.stream()
-        .map(inntektGrunnlag -> new InntektPeriode(inntektGrunnlag.getReferanse(), inntektGrunnlag.getPeriode(), inntektGrunnlag.getType(),
-            inntektGrunnlag.getBelop()))
-        .sorted(comparing(inntektPeriode -> inntektPeriode.getPeriodeDatoFraTil().getDatoFom()))
-        .collect(toList());
-  }
-
 
   // Validerer at input-verdier til bidragsevneberegning er gyldige
   public List<Avvik> validerInput(BeregnBidragsevneGrunnlag beregnBidragsevneGrunnlag) {
@@ -213,13 +191,6 @@ public class BidragsevnePeriodeImpl implements BidragsevnePeriode {
     }
     avvikListe.addAll(PeriodeUtil.validerInputDatoer(beregnBidragsevneGrunnlag.getBeregnDatoFra(),
         beregnBidragsevneGrunnlag.getBeregnDatoTil(), "saerfradragPeriodeListe", saerfradragPeriodeListe, true, true, true, true));
-
-    // Valider inntekter
-    var inntektGrunnlagListe = beregnBidragsevneGrunnlag.getInntektPeriodeListe().stream()
-        .map(inntektPeriode -> new InntektPeriodeGrunnlag(inntektPeriode.getReferanse(), inntektPeriode.getPeriode(), inntektPeriode.getInntektType(),
-            inntektPeriode.getInntektBelop(), false, false))
-        .collect(toList());
-    avvikListe.addAll(InntektUtil.validerInntekter(inntektGrunnlagListe, SoknadType.BIDRAG, Rolle.BIDRAGSPLIKTIG));
 
     return avvikListe;
   }
